# Opengl_Mission

./: Box.txt  CMakeLists.txt  Camera.h  CameraMesh.h  DepthShader.frag  DepthShader.vert  Opengl_Camera.vcxproj  Opengl_Camera.vcxproj.filters  Opengl_Mission.sln  Openglproject.cpp  OutputData.h  PointsMesh.frag  PointsMesh.vert  Quard.frag  README.md  Recent.json  SphereMesh.frag  SphereMesh.vert  imgui.ini  light.txt  light2.txt  light3.txt  light4.txt  macthPoints.txt  matchPoints.txt  mesh - 副本.txt  mesh.txt  mesh2.txt  tempLightTest.light  测试相机.light.txt  顶扣球mesh.mesh
shader/: CameraMesh.frag  CameraMesh.vert  DepthShader.frag  DepthShader.vert  PointsMesh.frag  PointsMesh.vert  Quard.frag  SphereMesh.frag  SphereMesh.vert
src/: Camera.h  CameraMesh.h  FileDialog.h  GenMesh.h  GenVolum.h  Openglproject.cpp  OutputData.h  PointsMesh.h  RecentFile.h  Shader.h  SphereMesh.h  Utility.h  glad.c  readme.md
temp/temp/fangan1/: 300x140.light  Recent.json  imgui.ini  mesh.mesh
temp/temp/方案1/: Recent.json  imgui.ini  temp.light
temp/temp/方案2/: 240-115mesh.mesh  Recent.json  imgui.ini  tempLight.light  战斗机座舱挡光体mesh.mesh
temp/temp/方案3/: 3m人员挡光体，对称扁球.mesh  Recent.json  imgui.ini  对称扁球带双环light.light  扁上球带上90下20 对称.mesh
